fixed layout bugs and added auto content padding

--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ md-tab-content.md-no-scroll,
 md-tab-content.md-no-scroll>div,
 .no-scroll {
     height: 100%;
-    overflow-y: hidden !important;
+    /*overflow-y: hidden !important;*/
 }
 
 .scroll {
